	after processing, because we can't reuse it as the X11 version does.

	* gtk/gtk.def : updated exports

	* gtk/makefile.msc.in : added ATK, removed all test apps. (I
	would like to get rid of this file again, and use straight
	makefile.msc again, as the other Gtk+ subdirs do)

	* test/makefile.msc (new file) : build the test apps here

Sat May  5 10:06:24 2001  Owen Taylor  <otaylor@redhat.com>

	* Release 1.3.5

	* configure.in (GTK_MICRO_VERSION): Up to 1.3.5

	* NEWS: Updated

	* demos/gtk-demo/Makefile.am (EXTRA_DIST): Fix minor
	Makefile breakage.

Sat May  5 09:18:30 2001  Owen Taylor  <otaylor@redhat.com>

	* demos/gtk-demo/images.c (progressive_timeout): Fix
	typo in filename.

	* gtk/gtktreeview.c (gtk_tree_view_row_activated): Comment
	out FIXME warning; just too annoying.

2001-05-04  Alex Larsson  <alla@lysator.liu.se>

	* gdk/linux-fb/gdkcolor-fb.c:
	Better error messages.

	* gdk/linux-fb/gdkpixmap-fb.c (gdk_pixmap_new):
	Initialize abs_x and abs_y.
	
	* gdk/linux-fb/gdkrender-fb.c (gdk_fb_fill_span_generic):
	Correct handling of stipple offset.

	* gdk/linux-fb/gdkvisual-fb.c (gdk_visual_init):
	Treat directcolor framebuffers as truecolor.
	
Thu May  3 14:13:49 2001  Owen Taylor  <otaylor@redhat.com>

        * INSTALL.in HACKING gtk/gtkaccessible.[ch] gtk/gtk.c: Add
	dependency on Atk for accessibility support.

	* configure.in **/Makefile.am: Major reworking of substituted
	variables for CFLAGS/LIBS to make a lot more sane and 
	keep the the compile/link lines a bit shorter.

	* gdk/x11/gdkkeys-x11.c: Fix #endif with trailing stuff.

Thu May  3 08:10:54 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktexttag.c (gtk_text_tag_class_init): Fix return
	value to be G_TYPE_BOOLEAN, not G_TYPE_INT, also,
	use _gtk_boolean_handled_accumulator.

Thu May  3 07:00:09 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c: Patch from Juan Pablo Mendoza Mendoza
	to fix things so clicking inside selection leaves cursor