@@ -171,6 +171,12 @@ Wed May  9 09:08:44 2001  Jonathan Blandford  <jrb@webwynk.net>
 
 	* test/makefile.msc (new file) : build the test apps here
 
+2001-05-05  ERDI Gergo  <cactus@cactus.rulez.org>
+
+	* gdk/gdkpango.c (gdk_pango_get_item_properties): Peek
+	strike-through setting
+	(gdk_draw_layout_line_with_colors): Render strike-through
+
 Sat May  5 10:06:24 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* Release 1.3.5
